# ZoteroCopilot

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  pyproject.toml  smithery.yaml
.github/: FUNDING.yml
.github/workflows/: release.yml
docs/: architecture.md  architecture.zh-CN.md  development.md  development.zh-CN.md  getting-started.md  getting-started.zh-CN.md  mcp-tools.md  mcp-tools.zh-CN.md  release-notes-0.3.0.zh-CN.md
packaging/helper/: build_release.py  helper_build_manifest.py  zotero-mcp-helper.spec
packaging/macos/: README.md  README.zh-CN.md  build-helper.sh
packaging/plugin/: build_xpi.py
packaging/windows/: README.md  README.zh-CN.md  build-helper.ps1  zotero-mcp-helper.spec
src/zotero_mcp/: chroma_client.py  cli.py  client.py  desktop_bridge_client.py  epub_utils.py  helper_bridge_proxy.py  helper_main.py  import_buffer.py  local_db.py  optional_features.py  pdf_utils.py  pdfannots_downloader.py  runtime_env.py  semantic_search.py  server.py  setup_helper.py  updater.py  utils.py  zotero_profile.py
tests/: test_desktop_bridge_client.py  test_helper_main.py  test_helper_packaging.py  test_import_buffer.py  test_pdfannots_downloader.py  test_plugin_packaging.py  test_search_wrapper.py  test_semantic_stats.py  test_server_advanced_search.py  test_server_desktop_bridge.py  test_server_notes_and_tags.py  test_zotero_profile.py
zero-mcp-plugin/: README.md  README.zh-CN.md  bootstrap.js  manifest.json  manifest.z7.json  manifest.z8.json  plugin-compat.js  plugin-main.js  preferences.js  preferences.xhtml  prefs.js  zero-mcp-plugin.js
