[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zotero-mcp-server"
dynamic = ["version"]
authors = [
  { name = "xiaogou1234" },
]
description = "Local-first MCP adapter and desktop bridge tooling for Zotero"
keywords = ["zotero", "mcp", "model-context-protocol", "research", "citations", "bibliography"]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyzotero>=1.5.0",
    "mcp>=1.2.0",
    "python-dotenv>=1.0.0",
    "markitdown[pdf]",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "fastmcp>=2.14.0",
    "pymupdf>=1.24.0",
    "ebooklib>=0.18",
]

[project.optional-dependencies]
semantic = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "openai>=1.0.0",
    "google-genai>=0.7.0",
    "tiktoken>=0.7.0",
]
build = [
    "pyinstaller>=6.5.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.urls]
"Homepage" = "https://github.com/xiaogou1234/ZoteroCopilot"
"Bug Tracker" = "https://github.com/xiaogou1234/ZoteroCopilot/issues"
"Documentation" = "https://github.com/xiaogou1234/ZoteroCopilot/tree/main/docs"
"Changelog" = "https://github.com/xiaogou1234/ZoteroCopilot/blob/main/CHANGELOG.md"

[project.scripts]
zotero-mcp = "zotero_mcp.cli:main"
zotero-mcp-helper = "zotero_mcp.helper_main:main"

[tool.hatch.version]
path = "src/zotero_mcp/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/zotero_mcp"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
